lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> expression
Rule 7     instruction -> assignment ;
Rule 8     instruction -> ifexpr
Rule 9     instruction -> loop
Rule 10    instruction -> returnexpr ;
Rule 11    instruction -> printexpr ;
Rule 12    instruction -> BREAK ;
Rule 13    instruction -> CONTINUE ;
Rule 14    instruction -> complexinstruction
Rule 15    complexinstruction -> { instructions }
Rule 16    assignment -> assignable = expression
Rule 17    assignment -> assignable ADDASSIGN expression
Rule 18    assignment -> assignable SUBASSIGN expression
Rule 19    assignment -> assignable MULASSIGN expression
Rule 20    assignment -> assignable DIVASSIGN expression
Rule 21    assignable -> ID
Rule 22    assignable -> matrixelement
Rule 23    matrixelement -> ID [ expression , expression ]
Rule 24    expression -> expression + expression
Rule 25    expression -> expression - expression
Rule 26    expression -> expression * expression
Rule 27    expression -> expression / expression
Rule 28    expression -> expression DOTADD expression
Rule 29    expression -> expression DOTSUB expression
Rule 30    expression -> expression DOTMUL expression
Rule 31    expression -> expression DOTDIV expression
Rule 32    expression -> expression LE expression
Rule 33    expression -> expression GE expression
Rule 34    expression -> expression EQ expression
Rule 35    expression -> expression > expression
Rule 36    expression -> expression < expression
Rule 37    expression -> expression DIFF expression
Rule 38    expression -> expression '
Rule 39    expression -> INTNUM
Rule 40    expression -> FLOATNUM
Rule 41    expression -> assignable
Rule 42    expression -> special ( expression )
Rule 43    expression -> [ minit ]
Rule 44    expression -> - expression
Rule 45    special -> EYE
Rule 46    special -> ZEROS
Rule 47    special -> ONES
Rule 48    minit -> minit , [ matrixcontents ]
Rule 49    minit -> [ matrixcontents ]
Rule 50    matrixcontents -> expression
Rule 51    matrixcontents -> matrixcontents , expression
Rule 52    ifexpr -> IF ( expression ) instruction
Rule 53    ifexpr -> IF ( expression ) instruction ELSE instruction
Rule 54    loop -> forloop
Rule 55    loop -> whileloop
Rule 56    forloop -> FOR ID = range instruction
Rule 57    whileloop -> WHILE ( expression ) instruction
Rule 58    range -> expression : expression
Rule 59    returnexpr -> RETURN expression
Rule 60    printexpr -> PRINT printable
Rule 61    printable -> STRING
Rule 62    printable -> expression
Rule 63    printable -> printable , expression

Terminals, with rules where they appear

'                    : 38
(                    : 42 52 53 57
)                    : 42 52 53 57
*                    : 26
+                    : 24
,                    : 23 48 51 63
-                    : 25 44
/                    : 27
:                    : 58
;                    : 7 10 11 12 13
<                    : 36
=                    : 16 56
>                    : 35
ADDASSIGN            : 17
BREAK                : 12
CONTINUE             : 13
DIFF                 : 37
DIVASSIGN            : 20
DOTADD               : 28
DOTDIV               : 31
DOTMUL               : 30
DOTSUB               : 29
ELSE                 : 53
EQ                   : 34
EYE                  : 45
FLOATNUM             : 40
FOR                  : 56
GE                   : 33
ID                   : 21 23 56
IF                   : 52 53
INTNUM               : 39
LE                   : 32
MULASSIGN            : 19
ONES                 : 47
PRINT                : 60
RETURN               : 59
STRING               : 61
SUBASSIGN            : 18
WHILE                : 57
ZEROS                : 46
[                    : 23 43 48 49
]                    : 23 43 48 49
error                : 
{                    : 15
}                    : 15

Nonterminals, with rules where they appear

assignable           : 16 17 18 19 20 41
assignment           : 7
complexinstruction   : 14
expression           : 6 16 17 18 19 20 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 42 44 50 51 52 53 57 58 58 59 62 63
forloop              : 54
ifexpr               : 8
instruction          : 4 5 52 53 53 56 57
instructions         : 2 4 15
instructions_opt     : 1
loop                 : 9
matrixcontents       : 48 49 51
matrixelement        : 22
minit                : 43 48
printable            : 60 63
printexpr            : 11
program              : 0
range                : 56
returnexpr           : 10
special              : 42
whileloop            : 55

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . expression
    (7) instruction -> . assignment ;
    (8) instruction -> . ifexpr
    (9) instruction -> . loop
    (10) instruction -> . returnexpr ;
    (11) instruction -> . printexpr ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . CONTINUE ;
    (14) instruction -> . complexinstruction
    (24) expression -> . expression + expression
    (25) expression -> . expression - expression
    (26) expression -> . expression * expression
    (27) expression -> . expression / expression
    (28) expression -> . expression DOTADD expression
    (29) expression -> . expression DOTSUB expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTDIV expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GE expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression > expression
    (36) expression -> . expression < expression
    (37) expression -> . expression DIFF expression
    (38) expression -> . expression '
    (39) expression -> . INTNUM
    (40) expression -> . FLOATNUM
    (41) expression -> . assignable
    (42) expression -> . special ( expression )
    (43) expression -> . [ minit ]
    (44) expression -> . - expression
    (16) assignment -> . assignable = expression
    (17) assignment -> . assignable ADDASSIGN expression
    (18) assignment -> . assignable SUBASSIGN expression
    (19) assignment -> . assignable MULASSIGN expression
    (20) assignment -> . assignable DIVASSIGN expression
    (52) ifexpr -> . IF ( expression ) instruction
    (53) ifexpr -> . IF ( expression ) instruction ELSE instruction
    (54) loop -> . forloop
    (55) loop -> . whileloop
    (59) returnexpr -> . RETURN expression
    (60) printexpr -> . PRINT printable
    (15) complexinstruction -> . { instructions }
    (21) assignable -> . ID
    (22) assignable -> . matrixelement
    (45) special -> . EYE
    (46) special -> . ZEROS
    (47) special -> . ONES
    (56) forloop -> . FOR ID = range instruction
    (57) whileloop -> . WHILE ( expression ) instruction
    (23) matrixelement -> . ID [ expression , expression ]

    $end            reduce using rule 3 (instructions_opt -> .)
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    [               shift and go to state 19
    -               shift and go to state 14
    IF              shift and go to state 20
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    {               shift and go to state 25
    ID              shift and go to state 26
    EYE             shift and go to state 28
    ZEROS           shift and go to state 29
    ONES            shift and go to state 30
    FOR             shift and go to state 31
    WHILE           shift and go to state 32

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    ifexpr                         shift and go to state 7
    loop                           shift and go to state 8
    returnexpr                     shift and go to state 9
    printexpr                      shift and go to state 10
    complexinstruction             shift and go to state 13
    assignable                     shift and go to state 17
    special                        shift and go to state 18
    forloop                        shift and go to state 21
    whileloop                      shift and go to state 22
    matrixelement                  shift and go to state 27

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . expression
    (7) instruction -> . assignment ;
    (8) instruction -> . ifexpr
    (9) instruction -> . loop
    (10) instruction -> . returnexpr ;
    (11) instruction -> . printexpr ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . CONTINUE ;
    (14) instruction -> . complexinstruction
    (24) expression -> . expression + expression
    (25) expression -> . expression - expression
    (26) expression -> . expression * expression
    (27) expression -> . expression / expression
    (28) expression -> . expression DOTADD expression
    (29) expression -> . expression DOTSUB expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTDIV expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GE expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression > expression
    (36) expression -> . expression < expression
    (37) expression -> . expression DIFF expression
    (38) expression -> . expression '
    (39) expression -> . INTNUM
    (40) expression -> . FLOATNUM
    (41) expression -> . assignable
    (42) expression -> . special ( expression )
    (43) expression -> . [ minit ]
    (44) expression -> . - expression
    (16) assignment -> . assignable = expression
    (17) assignment -> . assignable ADDASSIGN expression
    (18) assignment -> . assignable SUBASSIGN expression
    (19) assignment -> . assignable MULASSIGN expression
    (20) assignment -> . assignable DIVASSIGN expression
    (52) ifexpr -> . IF ( expression ) instruction
    (53) ifexpr -> . IF ( expression ) instruction ELSE instruction
    (54) loop -> . forloop
    (55) loop -> . whileloop
    (59) returnexpr -> . RETURN expression
    (60) printexpr -> . PRINT printable
    (15) complexinstruction -> . { instructions }
    (21) assignable -> . ID
    (22) assignable -> . matrixelement
    (45) special -> . EYE
    (46) special -> . ZEROS
    (47) special -> . ONES
    (56) forloop -> . FOR ID = range instruction
    (57) whileloop -> . WHILE ( expression ) instruction
    (23) matrixelement -> . ID [ expression , expression ]

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    [               shift and go to state 19
    -               shift and go to state 14
    IF              shift and go to state 20
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    {               shift and go to state 25
    ID              shift and go to state 26
    EYE             shift and go to state 28
    ZEROS           shift and go to state 29
    ONES            shift and go to state 30
    FOR             shift and go to state 31
    WHILE           shift and go to state 32

    instruction                    shift and go to state 33
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    ifexpr                         shift and go to state 7
    loop                           shift and go to state 8
    returnexpr                     shift and go to state 9
    printexpr                      shift and go to state 10
    complexinstruction             shift and go to state 13
    assignable                     shift and go to state 17
    special                        shift and go to state 18
    forloop                        shift and go to state 21
    whileloop                      shift and go to state 22
    matrixelement                  shift and go to state 27

state 4

    (5) instructions -> instruction .

    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    INTNUM          reduce using rule 5 (instructions -> instruction .)
    FLOATNUM        reduce using rule 5 (instructions -> instruction .)
    [               reduce using rule 5 (instructions -> instruction .)
    -               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    EYE             reduce using rule 5 (instructions -> instruction .)
    ZEROS           reduce using rule 5 (instructions -> instruction .)
    ONES            reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> expression .
    (24) expression -> expression . + expression
    (25) expression -> expression . - expression
    (26) expression -> expression . * expression
    (27) expression -> expression . / expression
    (28) expression -> expression . DOTADD expression
    (29) expression -> expression . DOTSUB expression
    (30) expression -> expression . DOTMUL expression
    (31) expression -> expression . DOTDIV expression
    (32) expression -> expression . LE expression
    (33) expression -> expression . GE expression
    (34) expression -> expression . EQ expression
    (35) expression -> expression . > expression
    (36) expression -> expression . < expression
    (37) expression -> expression . DIFF expression
    (38) expression -> expression . '

  ! shift/reduce conflict for - resolved as shift
    BREAK           reduce using rule 6 (instruction -> expression .)
    CONTINUE        reduce using rule 6 (instruction -> expression .)
    INTNUM          reduce using rule 6 (instruction -> expression .)
    FLOATNUM        reduce using rule 6 (instruction -> expression .)
    [               reduce using rule 6 (instruction -> expression .)
    IF              reduce using rule 6 (instruction -> expression .)
    RETURN          reduce using rule 6 (instruction -> expression .)
    PRINT           reduce using rule 6 (instruction -> expression .)
    {               reduce using rule 6 (instruction -> expression .)
    ID              reduce using rule 6 (instruction -> expression .)
    EYE             reduce using rule 6 (instruction -> expression .)
    ZEROS           reduce using rule 6 (instruction -> expression .)
    ONES            reduce using rule 6 (instruction -> expression .)
    FOR             reduce using rule 6 (instruction -> expression .)
    WHILE           reduce using rule 6 (instruction -> expression .)
    $end            reduce using rule 6 (instruction -> expression .)
    }               reduce using rule 6 (instruction -> expression .)
    ELSE            reduce using rule 6 (instruction -> expression .)
    +               shift and go to state 34
    -               shift and go to state 35
    *               shift and go to state 36
    /               shift and go to state 37
    DOTADD          shift and go to state 38
    DOTSUB          shift and go to state 39
    DOTMUL          shift and go to state 40
    DOTDIV          shift and go to state 41
    LE              shift and go to state 42
    GE              shift and go to state 43
    EQ              shift and go to state 44
    >               shift and go to state 45
    <               shift and go to state 46
    DIFF            shift and go to state 47
    '               shift and go to state 48

  ! -               [ reduce using rule 6 (instruction -> expression .) ]


state 6

    (7) instruction -> assignment . ;

    ;               shift and go to state 49


state 7

    (8) instruction -> ifexpr .

    BREAK           reduce using rule 8 (instruction -> ifexpr .)
    CONTINUE        reduce using rule 8 (instruction -> ifexpr .)
    INTNUM          reduce using rule 8 (instruction -> ifexpr .)
    FLOATNUM        reduce using rule 8 (instruction -> ifexpr .)
    [               reduce using rule 8 (instruction -> ifexpr .)
    -               reduce using rule 8 (instruction -> ifexpr .)
    IF              reduce using rule 8 (instruction -> ifexpr .)
    RETURN          reduce using rule 8 (instruction -> ifexpr .)
    PRINT           reduce using rule 8 (instruction -> ifexpr .)
    {               reduce using rule 8 (instruction -> ifexpr .)
    ID              reduce using rule 8 (instruction -> ifexpr .)
    EYE             reduce using rule 8 (instruction -> ifexpr .)
    ZEROS           reduce using rule 8 (instruction -> ifexpr .)
    ONES            reduce using rule 8 (instruction -> ifexpr .)
    FOR             reduce using rule 8 (instruction -> ifexpr .)
    WHILE           reduce using rule 8 (instruction -> ifexpr .)
    $end            reduce using rule 8 (instruction -> ifexpr .)
    }               reduce using rule 8 (instruction -> ifexpr .)
    ELSE            reduce using rule 8 (instruction -> ifexpr .)


state 8

    (9) instruction -> loop .

    BREAK           reduce using rule 9 (instruction -> loop .)
    CONTINUE        reduce using rule 9 (instruction -> loop .)
    INTNUM          reduce using rule 9 (instruction -> loop .)
    FLOATNUM        reduce using rule 9 (instruction -> loop .)
    [               reduce using rule 9 (instruction -> loop .)
    -               reduce using rule 9 (instruction -> loop .)
    IF              reduce using rule 9 (instruction -> loop .)
    RETURN          reduce using rule 9 (instruction -> loop .)
    PRINT           reduce using rule 9 (instruction -> loop .)
    {               reduce using rule 9 (instruction -> loop .)
    ID              reduce using rule 9 (instruction -> loop .)
    EYE             reduce using rule 9 (instruction -> loop .)
    ZEROS           reduce using rule 9 (instruction -> loop .)
    ONES            reduce using rule 9 (instruction -> loop .)
    FOR             reduce using rule 9 (instruction -> loop .)
    WHILE           reduce using rule 9 (instruction -> loop .)
    $end            reduce using rule 9 (instruction -> loop .)
    }               reduce using rule 9 (instruction -> loop .)
    ELSE            reduce using rule 9 (instruction -> loop .)


state 9

    (10) instruction -> returnexpr . ;

    ;               shift and go to state 50


state 10

    (11) instruction -> printexpr . ;

    ;               shift and go to state 51


state 11

    (12) instruction -> BREAK . ;

    ;               shift and go to state 52


state 12

    (13) instruction -> CONTINUE . ;

    ;               shift and go to state 53


state 13

    (14) instruction -> complexinstruction .

    BREAK           reduce using rule 14 (instruction -> complexinstruction .)
    CONTINUE        reduce using rule 14 (instruction -> complexinstruction .)
    INTNUM          reduce using rule 14 (instruction -> complexinstruction .)
    FLOATNUM        reduce using rule 14 (instruction -> complexinstruction .)
    [               reduce using rule 14 (instruction -> complexinstruction .)
    -               reduce using rule 14 (instruction -> complexinstruction .)
    IF              reduce using rule 14 (instruction -> complexinstruction .)
    RETURN          reduce using rule 14 (instruction -> complexinstruction .)
    PRINT           reduce using rule 14 (instruction -> complexinstruction .)
    {               reduce using rule 14 (instruction -> complexinstruction .)
    ID              reduce using rule 14 (instruction -> complexinstruction .)
    EYE             reduce using rule 14 (instruction -> complexinstruction .)
    ZEROS           reduce using rule 14 (instruction -> complexinstruction .)
    ONES            reduce using rule 14 (instruction -> complexinstruction .)
    FOR             reduce using rule 14 (instruction -> complexinstruction .)
    WHILE           reduce using rule 14 (instruction -> complexinstruction .)
    $end            reduce using rule 14 (instruction -> complexinstruction .)
    }               reduce using rule 14 (instruction -> complexinstruction .)
    ELSE            reduce using rule 14 (instruction -> complexinstruction .)


state 14

    (44) expression -> - . expression
    (24) expression -> . expression + expression
    (25) expression -> . expression - expression
    (26) expression -> . expression * expression
    (27) expression -> . expression / expression
    (28) expression -> . expression DOTADD expression
    (29) expression -> . expression DOTSUB expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTDIV expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GE expression
    (34) expression -> . expression EQ expression
    (35) expression -> . expression > expression
    (36) expression -> . expression < expression
    (37) expression -> . expression DIFF expression
    (38) expression -> . expression '
    (39) expression -> . INTNUM
    (40) expression -> . FLOATNUM
    (41) expression -> . assignable
    (42) expression -> . special ( expression )
    (43) expression -> . [ minit ]
    (44) expression -> . - expression
    (21) assignable -> . ID
    (22) assignable -> . matrixelement
    (45) special -> . EYE
    (46) special -> . ZEROS
    (47) special -> . ONES
    (23) matrixelement -> . ID [ expression , expression ]

    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    [               shift and go to state 19
    -               shift and go to state 14
    ID              shift and go to state 26
    EYE             shift and go to state 28
    ZEROS           shift and go to state 29
    ONES            shift and go to state 30

    expression                     shift and go to state 54
    assignable                     shift and go to state 55
    special                        shift and go to state 18
    matrixelement                  shift and go to state 27

state 15

    (39) expression -> INTNUM .

    +               reduce using rule 39 (expression -> INTNUM .)
    -               reduce using rule 39 (expression -> INTNUM .)
    *               reduce using rule 39 (expression -> INTNUM .)
    /               reduce using rule 39 (expression -> INTNUM .)
    DOTADD          reduce using rule 39 (expression -> INTNUM .)
    DOTSUB          reduce using rule 39 (expression -> INTNUM .)
    DOTMUL          reduce using rule 39 (expression -> INTNUM .)
    DOTDIV          reduce using rule 39 (expression -> INTNUM .)
    LE              reduce using rule 39 (expression -> INTNUM .)
    GE              reduce using rule 39 (expression -> INTNUM .)
    EQ              reduce using rule 39 (expression -> INTNUM .)
    >               reduce using rule 39 (expression -> INTNUM .)
    <               reduce using rule 39 (expression -> INTNUM .)
    DIFF            reduce using rule 39 (expression -> INTNUM .)
    '               reduce using rule 39 (expression -> INTNUM .)
    BREAK           reduce using rule 39 (expression -> INTNUM .)
    CONTINUE        reduce using rule 39 (expression -> INTNUM .)
    INTNUM          reduce using rule 39 (expression -> INTNUM .)
    FLOATNUM        reduce using rule 39 (expression -> INTNUM .)
    [               reduce using rule 39 (expression -> INTNUM .)
    IF              reduce using rule 39 (expression -> INTNUM .)
    RETURN          reduce using rule 39 (expression -> INTNUM .)
    PRINT           reduce using rule 39 (expression -> INTNUM .)
    {               reduce using rule 39 (expression -> INTNUM .)
    ID              reduce using rule 39 (expression -> INTNUM .)
    EYE             reduce using rule 39 (expression -> INTNUM .)
    ZEROS           reduce using rule 39 (expression -> INTNUM .)
    ONES            reduce using rule 39 (expression -> INTNUM .)
    FOR             reduce using rule 39 (expression -> INTNUM .)
    WHILE           reduce using rule 39 (expression -> INTNUM .)
    $end            reduce using rule 39 (expression -> INTNUM .)
    ;               reduce using rule 39 (expression -> INTNUM .)
    ,               reduce using rule 39 (expression -> INTNUM .)
    }               reduce using rule 39 (expression -> INTNUM .)
    )               reduce using rule 39 (expression -> INTNUM .)
    ]               reduce using rule 39 (expression -> INTNUM .)
    :               reduce using rule 39 (expression -> INTNUM .)
    ELSE            reduce using rule 39 (expression -> INTNUM .)


state 16

    (40) expression -> FLOATNUM .

    +               reduce using rule 40 (expression -> FLOATNUM .)
    -               reduce using rule 40 (expression -> FLOATNUM .)
    *               reduce using rule 40 (expression -> FLOATNUM .)
    /               reduce using rule 40 (expression -> FLOATNUM .)
    DOTADD          reduce using rule 40 (expression -> FLOATNUM .)
    DOTSUB          reduce using rule 40 (expression -> FLOATNUM .)
    DOTMUL          reduce using rule 40 (expression -> FLOATNUM .)
    DOTDIV          reduce using rule 40 (expression -> FLOATNUM .)
    LE              reduce using rule 40 (expression -> FLOATNUM .)
    GE              reduce using rule 40 (expression -> FLOATNUM .)
    EQ              reduce using rule 40 (expression -> FLOATNUM .)
    >               reduce using rule 40 (expression -> FLOATNUM .)
    <               reduce using rule 40 (expression -> FLOATNUM .)
    DIFF            reduce using rule 40 (expression -> FLOATNUM .)
    '               reduce using rule 40 (expression -> FLOATNUM .)
    BREAK           reduce using rule 40 (expression -> FLOATNUM .)
    CONTINUE        reduce using rule 40 (expression -> FLOATNUM .)
    INTNUM          reduce using rule 40 (expression -> FLOATNUM .)
    FLOATNUM        reduce using rule 40 (expression -> FLOATNUM .)
    [               reduce using rule 40 (expression -> FLOATNUM .)
    IF              reduce using rule 40 (expression -> FLOATNUM .)
    RETURN          reduce using rule 40 (expression -> FLOATNUM .)
    PRINT           reduce using rule 40 (expression -> FLOATNUM .)
    {               reduce using rule 40 (expression -> FLOATNUM .)
    ID              reduce using rule 40 (expression -> FLOATNUM .)
    EYE             reduce using rule 40 (expression -> FLOATNUM .)
    ZEROS           reduce using rule 40 (expression -> FLOATNUM .)
    ONES            reduce using rule 40 (expression -> FLOATNUM .)
    FOR             reduce using rule 40 (expression -> FLOATNUM .)
    WHILE           reduce using rule 40 (expression -> FLOATNUM .)
    $end            reduce using rule 40 (expression -> FLOATNUM .)
    ;               reduce using rule 40 (expression -> FLOATNUM .)
    ,               reduce using rule 40 (expression -> FLOATNUM .)
    }               reduce using rule 40 (expression -> FLOATNUM .)
    )               reduce using rule 40 (expression -> FLOATNUM .)
    ]               reduce using rule 40 (expression -> FLOATNUM .)
    :               reduce using rule 40 (expression -> FLOATNUM .)
    ELSE            reduce using rule 40 (expression -> FLOATNUM .)


state 17

    (41) expression -> assignable .
    (16) assignment -> assignable . = expression
    (17) assignment -> assignable . ADDASSIGN expression
    (18) assignment -> assignable . SUBASSIGN expression
    (19) assignment -> assignable . MULASSIGN expression
    (20) assignment -> assignable . DIVASSIGN expression

    +               reduce using rule 41 (expression -> assignable .)
    -               reduce using rule 41 (expression -> assignable .)
    *               reduce using rule 41 (expression -> assignable .)
    /               reduce using rule 41 (expression -> assignable .)
    DOTADD          reduce using rule 41 (expression -> assignable .)
    DOTSUB          reduce using rule 41 (expression -> assignable .)
    DOTMUL          reduce using rule 41 (expression -> assignable .)
    DOTDIV          reduce using rule 41 (expression -> assignable .)
    LE              reduce using rule 41 (expression -> assignable .)
    GE              reduce using rule 41 (expression -> assignable .)
    EQ              reduce using rule 41 (expression -> assignable .)
    >               reduce using rule 41 (expression -> assignable .)
    <               reduce using rule 41 (expression -> assignable .)
    DIFF            reduce using rule 41 (expression -> assignable .)
    '               reduce using rule 41 (expression -> assignable .)
    BREAK           reduce using rule 41 (expression -> assignable .)
    CONTINUE        reduce using rule 41 (expression -> assignable .)
    INTNUM          reduce using rule 41 (expression -> assignable .)
    FLOATNUM        reduce using rule 41 (expression -> assignable .)
    [               reduce using rule 41 (expression -> assignable .)
    IF              reduce using rule 41 (expression -> assignable .)
    RETURN          reduce using rule 41 (expression -> assignable .)
    PRINT           reduce using rule 41 (expression -> assignable .)
    {               reduce using rule 41 (expression -> assignable .)
    ID              reduce using rule 41 (expression -> assignable .)
    EYE             reduce using rule 41 (expression -> assignable .)
    ZEROS           reduce using rule 41 (expression -> assignable .)
    ONES            reduce using rule 41 (expression -> assignable .)
    FOR             reduce using rule 41 (expression -> assignable .)
    WHILE           reduce using rule 41 (expression -> assignable .)
    $end            reduce using rule 41 (expression -> assignable .)
    }               reduce using rule 41 (expression -> assignable .)
    ELSE            reduce using rule 41 (expression -> assignable .)
    =               shift and go to state 56
    ADDASSIGN       shift and go to state 57
    SUBASSIGN       shift and go to state 58
    MULASSIGN       shift and go to state 59
    DIVASSIGN       shift and go to state 60


state 18

    (42) expression -> special . ( expression )

    (               shift and go to state 61


state 19

    (43) expression -> [ . minit ]
    (48) minit -> . minit , [ matrixcontents ]
    (49) minit -> . [ matrixcontents ]

    [               shift and go to state 62

    minit                          shift and go to state 63

state 20

    (52) ifexpr -> IF . ( expression ) instruction
    (53) ifexpr -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 64


state 21

    (54) loop -> forloop .

    BREAK           reduce using rule 54 (loop -> forloop .)
    CONTINUE        reduce using rule 54 (loop -> forloop .)
    INTNUM          reduce using rule 54 (loop -> forloop .)
    FLOATNUM        reduce using rule 54 (loop -> forloop .)
    [               reduce using rule 54 (loop -> forloop .)
    -               reduce using rule 54 (loop -> forloop .)
    IF              reduce using rule 54 (loop -> forloop .)
    RETURN          reduce using rule 54 (loop -> forloop .)
    PRINT           reduce using rule 54 (loop -> forloop .)
    {               reduce using rule 54 (loop -> forloop .)
    ID              reduce using rule 54 (loop -> forloop .)
    EYE             reduce using rule 54 (loop -> forloop .)
    ZEROS           reduce using rule 54 (loop -> forloop .)
    ONES            reduce using rule 54 (loop -> forloop .)
    FOR             reduce using rule 54 (loop -> forloop .)
    WHILE           reduce using rule 54 (loop -> forloop .)
    $end            reduce using rule 54 (loop -> forloop .)
    }               reduce using rule 54 (loop -> forloop .)
    ELSE            reduce using rule 54 (loop -> forloop .)


state 22

    (55) loop -> whileloop .

    BREAK           reduce using rule 55 (loop -> whileloop .)
    CONTINUE        reduce using rule 55 (loop -> whileloop .)
    INTNUM          reduce using rule 55 (loop -> whileloop .)
    FLOATNUM        reduce using rule 55 (loop -> whileloop .)
    [               reduce using rule 55 (loop -> whileloop .)
    -               reduce using rule 55 (loop -> whileloop .)
    IF              reduce using rule 55 (loop -> whileloop .)
    RETURN          reduce using rule 55 (loop -> whileloop .)
    PRINT           reduce using rule 55 (loop -> whileloop .)
    {               reduce using rule 55 (loop -> whileloop .)
    ID              reduce using rule 55 (loop -> whileloop .)
    EYE             reduce using rule 55 (loop -> whileloop .)
    ZEROS           reduce using rule 55 (loop -> whileloop .)
    ONES            reduce using rule 55 (loop -> whileloop .)
    FOR             reduce using rule 55 (loop -> whileloop .)
    WHILE           reduce using rule 55 (loop -> whileloop .)
    $end            reduce using rule 55 (loop -> whileloop .)
    }               reduce using rule 55 (loop -> whileloop .)
    ELSE            reduce using rule 55 (loop -> whileloop .)


state 23
